# pulse-ui

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  ISSUES.md  KNOWN_ISSUES.md  LINTING.md  Makefile  NOTES.md  PULSE_GUIDE.md  README.md  RENDERABLE_PAYLOADS_HANDOFF.md  STONEWARE_RAILWAY_MIGRATION.md  TODO.md  auth.py  basedpyright.toml  biome.json  bunfig.toml  code-review.md  demo.py  example.py  implementation-plan.md  main.py  mount-id-message-scenarios-review.md  mount-id-message-scenarios.md  notes.md  package.json  progress.txt  pyproject.toml  pyrightconfig.json  state-example.py  test-python-to-js.py  test.py  test_comprehensive_example.py  test_doc.py  test_runner.py  tutorial.py
.agents/learnings/: 2026-04-15-pulse-railway-token-target-resolution.md
.claude/: settings.json
.claude/hooks/: context-monitor.py
.config/: wt.toml
.github/workflows/: ci.yml  publish.yml  release.yml
.tmp-review/flat/: main.py
docs/: .gitignore  GUIDELINES.md  NEXT_STEPS.md  README.md  docs.json  mdx-components.tsx  next.config.mjs  package.json  proxy.ts  tsconfig.json
docs/advanced/: architecture.mdx  channels.mdx  custom-hooks.mdx  extending-the-server.mdx  index.mdx  libraries.mdx  middleware.mdx
docs/api-reference/: index.mdx
docs/app/: global.css  layout.tsx
docs/components/: related-pages.tsx
docs/concepts/: async.mdx  components.mdx  events.mdx  hooks.mdx  index.mdx  javascript.mdx  keys.mdx  (+6 more)
examples/: Dockerfile  auth.py  channels.py  client-server-address.py  debounced.py  error_types.py  forms.py  global_state.py  infinite_query.py  init_hook.py  inline_effects.py  inline_states.py  js_exec_demo.py  keyed_reconciliation.py  lazy_import.py  main.py  mantine_appshell.py  mantine_form.py  middleware_redirects.py  msal_auth.py  pandas_adapter.py  query.py  query_param.py  recharts.py  refs.py  registry-demo.module.css  registry_demo.py  render_props.py  state_persistence.py  todo.py  transpiled_functions.py
plans/: aws-ecs-deployment-exec-plan.md  aws-ecs-deployment.md  code-splitting-poc.md  codegen-rewrite.md  ecs-draining-reaper.md  error-routing-overhaul.md  fine_grained_component_rerender.md  minimal-react-framework.md  node-jsexpr-unification.md  pulse_cli_refactor.md  pulse_logging_exec_plan.md  pulse_logging_improvements.md  pulse_render_session_persistence.md  pulse_state_persistence.md  react_like_component_rerender.md  reaper_lambda.py  ref-task-error-routing.md  render_session_refactor.md  transpiler-v2-review.md  ty-migration.md  unified-tree-design.md
poc/: README.md  index.html  package.json  tsconfig.server.json  vite.config.ts
pulse/: README_TESTING.md  __init__.py  api.py  app.py  cmd.py  codegen.py  component.py  context.py  decorators.py  diff.py  flatted.py  helpers.py  hooks.py  html.py  messages.py  middleware.py  nodes.py  query.py  react_component.py  reactive.py  reactive_extensions.py  reconciler.py  render.py  route.py  routes.py  routing.py  server.py  session.py  state.py  templates.py  types.py  vdom.py
pulse-client/: package.json
pulse-demo/: package.json  vite.config.ts
pulse-react/: README.md  package.json
pulse-web/: package.json  vitest.config.ts
scripts/: benchmark-serializers.ts  build-js-packages.ts  bump_version.py  closure_test.py  count_loc.sh  sync_versions.py  test_phase1.py  tree_perf.py  typecheck_stats.py  update_react_component.py  version_audit.py
skills/: README.md
specs/: asgi-proxy-aiohttp.md  combobox-channelid-required.md  custom-framework-redesign.md  hook-callsite-identity.md  hot-reload-cli.md  hot-reload-core.md  hot-reload-fast-refresh.md  independent-rendering.md  pulse-js-advanced-builtins-plan.md  pulse-railway-control-plane-invariants-plan.md  queryparam-url-state.md  transpiler-scope-stack.md
tutorial/: README.md
(+1884 files in other folders)
