[project]
name = "pulse-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []


[dependency-groups]
dev = [
    "pulse-framework",
    "pulse-lucide",
    "pulse-recharts",
    "pulse-msal",
    "pulse-mantine",
    "ipykernel>=6.30.1",
    "msal>=1.32.0,<1.33.0",
    "mypy>=1.17.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.14.1",
]

[tool.uv.sources]
pulse-framework = { workspace = true }
pulse-lucide = { workspace = true }
pulse-recharts = { workspace = true }
pulse-msal = { workspace = true }
pulse-mantine = { workspace = true }


[tool.uv.workspace]
members = [
    "packages/pulse",
    "packages/pulse-lucide",
    "packages/pulse-msal",
    "packages/pulse-recharts",
    "packages/pulse-mantine/python",
    "packages/pulse-ag-grid",
]


[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"] # default + "I"
