[project]
name = "pulse-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []


[dependency-groups]
dev = [
    "pulse-ag-grid",
    "pulse-framework",
    "pulse-lucide",
    "pulse-mantine",
    "pulse-msal",
    "pulse-recharts",
    "ipykernel>=6.30.1",
    "msal>=1.32.0,<1.33.0",
    "mypy>=1.17.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.1.0",
    "redis>=6.4.0",
    "ruff>=0.14.1",
    "basedpyright>=1.31.7",
    "prek>=0.2.10",
]

[tool.uv.sources]
pulse-ag-grid = { workspace = true }
pulse-framework = { workspace = true }
pulse-lucide = { workspace = true }
pulse-mantine = { workspace = true }
pulse-msal = { workspace = true }
pulse-recharts = { workspace = true }


[tool.uv.workspace]
members = [
    "packages/pulse",
    "packages/pulse-ag-grid",
    "packages/pulse-lucide",
    "packages/pulse-mantine/python",
    "packages/pulse-msal",
    "packages/pulse-recharts",
]


[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"] # default + "I"
