[project]
name = "pulse-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fumapy",
]


[dependency-groups]
dev = [
    "pulse-ag-grid",
    "pulse-framework",
    "pulse-lucide",
    "pulse-mantine",
    "pulse-msal",
    "pulse-recharts",
    "pulse-aws",
    "ipykernel>=6.30.1",
    "msal>=1.32.0,<1.33.0",
    "mypy>=1.17.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.1.0",
    "redis>=6.4.0",
    "ruff>=0.14.1",
    "basedpyright>=1.31.7",
    "prek>=0.2.10",
]

[tool.uv.sources]
pulse-ag-grid = { workspace = true }
pulse-framework = { workspace = true }
pulse-lucide = { workspace = true }
pulse-mantine = { workspace = true }
pulse-msal = { workspace = true }
pulse-recharts = { workspace = true }
pulse-aws = { workspace = true }
fumapy = { git = "https://github.com/fuma-nama/fumadocs", subdirectory = "packages/python" }


[tool.uv.workspace]
members = [
    "packages/pulse/python",
    "packages/pulse-ag-grid",
    "packages/pulse-lucide",
    "packages/pulse-mantine/python",
    "packages/pulse-msal",
    "packages/pulse-recharts",
    "packages/pulse-aws",
]


[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"] # default + "I"


[tool.pytest.ini_options]
markers = [
    "cdk: marks tests that require AWS CDK synthesis (slow, run with -m cdk)",
]
# Skip CDK tests by default (they're slow due to CDK synthesis)
# Run them explicitly with: pytest -m cdk
addopts = "-m 'not cdk'"
asyncio_default_fixture_loop_scope = "function"
